Sonarqube/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: devops
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresql
  selector:
    app: postgresql
  clusterIP: None
